--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Jogo da Velha</title>
 
@@ -13,8 +13,12 @@
 
         <div class="stage">
             <div>
-                <div id="0" class="square"></div>
-                <div id="1" class="square"></div>
+                <div id="0" class="square">
+
+                </div>
+                <div id="1" class="square">
+
+                </div>
                 <div id="2" class="square"></div>
             </div>
             <div>
@@ -32,7 +36,9 @@
         <body>
 
 
-            <script src="script.js"></script>
+            <script src="game.js"></script>
+            <script src="interface.js"></script>
+
         </body>
 
 </html>
